--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <footer>
     <div class="container">
       <p>Projeto de extensão – Trilha Inovação e Sustentabilidade | Engenharia de Software</p>
-      <p>Condomínio Residencial Easy | Versão 1.0 | (coloque a data)</p>
+      <p>Condomínio Residencial Easy | Versão 1.0 | Fevereiro 2026</p>
     </div>
   </footer>
 </body>
